going to add forms to my html page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div>
         <p>hello, <b>ninjas</b></p>
         <!--a (anchor tag) is an example of tag with attribute (href)-->
+        <a href="forms.html">Fill in this Form</a>
+        <br><br>
         <a href="about.html">About us</a>
     </div>
     <br>
